--- a/css/sass/_home.scss
+++ b/css/sass/_home.scss
@@ -28,13 +28,6 @@
 }
 
 .home {
-  h2,h3,p {
-    opacity: 80%;
-  }
-
-  h4 {
-    opacity: 60%;
-  }
 
   display: flex;
   flex-direction: column;
@@ -43,6 +36,13 @@
   padding-top: 150px;
   overflow: hidden;
 
+  h2,h3,p {
+    opacity: 80%;
+  }
+
+  h4 {
+    opacity: 60%;
+  }
 
   @include screen-medium {
     padding-top: 200px;
@@ -58,7 +58,6 @@
     h1 {
       display: flex;
       span.rotate {
-
         &:hover {
           rotate: 360deg;
           transition: .9s all ease-in-out;
@@ -77,7 +76,11 @@
     }
 
     h2 {
-      margin-top:-20px;
+      margin-top:-36px;
+
+      @include screen-medium {
+        margin-top:-20px;
+      }
     }
 
     @include screen-medium {
